--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,5 +12,14 @@
   "dependencies": {
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lucasCenciScoz/API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lucasCenciScoz/API/issues"
+  },
+  "homepage": "https://github.com/lucasCenciScoz/API#readme",
+  "description": ""
 }
